[STYLE] CommentConverter의 코드 스타일을 일관적으로 변경